# cpp-utils

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cpp-utils-ci.yml
cpputils/: guarded_thread.hpp  logger.cc  logger.hpp  worker.cc  worker.h
example/: CMakeLists.txt  main.cpp
examples/: CMakeLists.txt
include/cpputils/: guarded_thread.hpp
src/: CMakeLists.txt  logger.cc  worker.cc
tests/: CMakeLists.txt  test_guarded_thread.cc  test_logger.cc  test_worker.cc
